# Pattern-based-passive-automata-Lerning

./: .gitignore  Analysis_Evaluation.py  README.md  RandomWalksGenerator.py  Run_Learner_positive_only_minimum_traces_coverage_shortTraces.py  evaluation.py  get_hardMap.py  main.py  makefile  merge_1.dot  pyproject.toml  retrive_traces.py  thesis-transitioncover.txt  write_clear_file.py
Basic_objects/: DISJOINTSETS.py  Graph.py  State.py  Transition.py  Tree.py
Form_converter/: GraphObj_DotFile_converter.py  dot_to_png.py
Learners/: Baised_Learner_check_without_merge_1notfollow1.py  Biased_Sicco_EDSM_Learner.py  Classical_Learner.py  Sicco_Learner.py
Learners/DFASAT/: DFASAT_Variables.py  SAT.py  formula_builder_2410.py  kissat.py  variables_definer.py  visualizer.py
TESTS/Graph/: Test_lambda.py  (+7 more)
other/: Generate_hard_soft_maps.py  Random_Automata_Generator.py  analyis_data.py  calculate_ratio_of_missing_transitions.py  calculate_threshold.py  clean_automata_afterEDSM.py  commands_openSSL_transitioncover.txt  commands_openSSL_transitioncover_sicco.txt  delete_lines.py  difference_between_two_txt_files.py  generate_StateCover_traces.py  generate_TransitionCover_traces.py  stateChum_random_graph.txt  state_cover_checker.py
reference_automata/: Random1_reference.dot  Random2_reference.dot  Random3_reference.dot  Random4_reference.dot  Random5_reference.dot  Random6_reference.dot  TCP_reference.dot  TextEditorPaper_reference.dot  TextEditor_reference.dot  bluetooth_reference.dot  coffeemachine_reference.dot  openSSL_reference.dot  test_2following1_reference.dot
(+11530 files in other folders)
